# vbcrender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
src/: Event.cpp  Event.hpp  Renderer.cpp  Renderer.hpp  Styles.cpp  Styles.hpp  Tree.cpp  Tree.hpp  Types.hpp  VbcReader.cpp  VbcReader.hpp  VideoOutput.cpp  VideoOutput.hpp  main.cpp
src/renderer/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShaders.cpp  OpenGLShaders.hpp
src/renderer/opengl/shaders/: color.frag  marker.geom  transform.vert
tools/gen_scripts/: generate_vbc_code.py
